--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 font-size: 24pt;
                 color:red;
                 text-decoration: underline;
-                font-family: tahoma,helvetica,sans-serif;
+                font-family: tahoma,helvetica;
             }
             em{
             font-style: normal;
