--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>
             <strong>Introduction to Information Systems</strong>
         </p>
-        <p>
+        <p class="centered">
             <em>
             Ahmet Akın
             <br>
@@ -56,7 +56,7 @@
                 <p><img src="evolution-diagram.png"></p> 
             </a>
         </p>
-        <table>
+        <table border="8">
             <tr>
                 <th>Homo Habilis</th>
                 <th>Homo Erectus</th>
